--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ text {
 
 <p id="chart">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 <script src="js/sankey.js"></script>
 <script src="js/sankeytest.js"></script>
 <script>
