--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@ text {
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/sankey.js"></script>
 <script src="js/sankeytest.js"></script>
+
 <script>
 
 draw("data/ylds2013male.json")
