--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ text {
 <script src="js/bootstrap.min.js"></script>
 <script src="js/sankey.js"></script>
 <script src="js/sankeytest.js"></script>
+<script src="assets/lib/poshytip/jquery.poshytip.js"></script>
+<script src="assets/lib/poshytip/jquery.poshytip.js"></script>
 
 <script>
 
